Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,6 @@ steps:
   inputs:
     testTarget: 'TestProject'
     orchestratorConnection: 'UipathDev'
-    testProjectPath: '$(Build.ArtifactStagingDirectory)/Output'
+    testProjectPath: '$(Build.ArtifactStagingDirectory)/project.json'
     folderName: 'Shared'
 
